# raytrace-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  render.sh  run
src/: hot_wheels.rs  main.rs  metal_gradient.rs  shader.metal  threeShinys.rs
