[package]
name = "raytrace"
version = "0.1.0"
edition = "2021"
license = "MIT"
default-run = "three_shinys"

[dependencies]
nalgebra = "0.32"
image = "0.25"
rayon = "1.10"
indicatif = { version = "0.17", features = ["rayon"] }
metal = { version = "0.28", optional = true }

[[bin]]
name = "three_shinys"
path = "src/main.rs"

[[bin]]
name = "hot_wheels"
path = "src/hot_wheels.rs"

[[bin]]
name = "metal_gradient"
path = "src/metal_gradient.rs"
required-features = ["metal"]
